# linter

./: .gitignore  README.md  lint.py  publish.sh  pyproject.toml
PIP_PACKAGE_CONVERSION_INSTRUCTIONS/: CONSUMER_CONTEXT.md  EXAMPLE_DEFAULT_CONFIG.json  EXAMPLE_PYPROJECT.toml  EXAMPLE_USER_CONFIG.json  HARDCODED_PATHS.md  INSTRUCTIONS.md
checks/: __init__.py  eslint.py  knip.py  structural.py  vulture.py
config/: config.json  vulture_whitelist.py
src/swarm_lint/: __init__.py  __main__.py  cli.py  config.py  config_cmd.py  init_cmd.py  setup_cmd.py
src/swarm_lint/checks/: classes.py  endpoints.py  eslint.py  knip.py  structural.py  vulture.py
src/swarm_lint/defaults/: config.json  vulture_whitelist.py
src/swarm_lint/templates/: pyrightconfig.json  tasks.json
