[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm-lint"
version = "0.2.0"
description = "Unified structural linter for Python + TypeScript projects"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{name = "Haik Decie"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.9.0",
    "questionary>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/openswarm-ai/linter"
Repository = "https://github.com/openswarm-ai/linter"
Issues = "https://github.com/openswarm-ai/linter/issues"

[project.optional-dependencies]
watch = ["watchfiles"]
vulture = ["vulture"]
all = ["watchfiles", "vulture"]

[project.scripts]
swarm-lint = "swarm_lint.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
swarm_lint = [
    "defaults/*.json",
    "defaults/*.py",
    "templates/*.json",
]
